# PyFaudit

./: README.md  pyproject.toml  pysetup.toml  setup.py
.gitgub/workflows/: publish.yml
PyFaudit/: scanner.py
